# serializer version: 1
# name: TestAttachmentsColumn.test_header_has_attachments_column
  '''
  # ws/ Manifest
  
  Machine-readable index for AI navigation. Read this file first, then open only the docs relevant to your query.
  
  **Retrieval strategy:** See doc00.04 for AI retrieval patterns.
  
  ## Column Definitions
  
  - **Ref**: Cross-reference ID (`docXX.YY.ZZ`)
  - **File**: Path relative to title directory
  - **Summary**: One-line description for semantic matching
  - **Tags**: Keywords for file-path→doc mapping
  - **Deps**: Doc refs to check when this doc changes
  - **Refs**: Reverse deps — docs that list this one in their Deps (computed automatically)
  - **Attachments**: Non-md files sharing the doc's numeric prefix. Sidecar artifacts that travel with the doc during structural operations. Purely filesystem-derived; not a frontmatter field.
  
  Orphaned attachments (non-md files with no corresponding root .md) are reported as warnings on stderr during regeneration and do not appear in this table.
  
  ## 01-docs — Docs
  
  | Ref | File | Summary | Tags | Deps | Refs | Attachments |
  |-----|------|---------|------|------|------|-------------|
  
  | doc01.00 | `00-index.md` |  |  | — | — | — |
  | doc01.01 | `01-intro.md` |  |  | — | — | — |
  
  ## Tag Index
  
  Quick lookup for file-path→doc mapping:
  
  | Tag | Relevant Docs |
  |-----|---------------|
  
  '''
# ---
# name: TestAttachmentsColumn.test_orphan_subdir_conflict
  '''
  Warning: 1 orphaned attachment(s) found:
    <TMPDIR>/01-docs/03-stale.yaml
  
  '''
# ---
# name: TestAttachmentsColumn.test_orphan_warning_to_stderr
  '''
  Warning: 1 orphaned attachment(s) found:
    <TMPDIR>/01-docs/03-orphan.json
  
  '''
# ---
